--- a/frontend/.eslintrc.yml
+++ b/frontend/.eslintrc.yml
@@ -19,3 +19,4 @@ rules:
   import/no-unresolved: 0
   no-console: 0
   no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
+  react/react-in-jsx-scope: 0
