--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Stanislav Gribanov",
   "license": "ISC",
   "dependencies": {
-    "@hexlet/chat-server": "^1.1.8"
+    "@hexlet/chat-server": "^1.1.8",
+    "socket.io": "^4.7.2"
   }
 }
