--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "classnames": "^2.3.2",
     "express": "^4.18.2",
     "formik": "^2.4.3",
+    "i18next": "^23.5.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.2.2",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
