--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.2",
     "formik": "^2.4.3",
     "i18next": "^23.5.1",
+    "leo-profanity": "^1.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
