--- a/frontend/.eslintrc.yml
+++ b/frontend/.eslintrc.yml
@@ -17,6 +17,7 @@ plugins:
   - react
 rules:
   react/jsx-filename-extension: [1, { "extensions": [".js", ".jsx"] }]
+  react/function-component-definition: [2, { "namedComponents": "arrow-function" }]
   import/no-unresolved: 0
   no-console: 0
   no-underscore-dangle: [2, { "allow": ["__filename", "__dirname"] }]
